re-installed things and fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,10 @@ a:-webkit-any-link{
     filter:drop-shadow(5px 5px 0px rgba(0, 0, 0, .12));
 }
 @media screen and (max-width:720px) {
+    .hero-frame{
+        overflow-x: hidden;
+        
+    }
     .bear-graphic{
         width: 720px;
     }
